# sdl-lock

./: .clang-format  .gitignore  CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: FindPAM.cmake
src/: CMakeLists.txt  config.h.in  sdl-lock.c
src/auth/: auth.c  auth.h
src/auth/pam/: password.c  password.h
src/core/: conf.c  conf.h  log.c  log.h  opts.c  opts.h  status.h  utils.c  utils.h
src/gfx/: init.h  window.h
src/gfx/sdl3/: init.c  window.c
